--- a/Continuepretrainin.ipynb
+++ b/Continuepretrainin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNESgwpQ/Cz7lTmtMR0Kbnl",
+      "authorship_tag": "ABX9TyN+98qiLTQrsJ+RYMy3aePK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +33,21 @@
         "id": "gGAzRr17AwKn"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "%%capture\n",
+        "# Installs Unsloth, Xformers (Flash Attention) and all other packages!\n",
+        "!pip install \"unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git\"\n",
+        "!pip install --no-deps \"xformers<0.0.27\" \"trl<0.9.0\" peft accelerate bitsandbytes"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2PEW-WBwBLl0"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
