--- a/Continuepretrainin.ipynb
+++ b/Continuepretrainin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+98qiLTQrsJ+RYMy3aePK",
+      "authorship_tag": "ABX9TyMl+B442VwFALz6AGGFsAcg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,9 +42,49 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import os\n",
+        "from datasets import Dataset, concatenate_datasets"
+      ],
       "metadata": {
         "id": "2PEW-WBwBLl0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "userdata.get('HF_TOKEN')"
+      ],
+      "metadata": {
+        "id": "ILbKIwAfCv7T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from unsloth import FastLanguageModel\n",
+        "import torch\n",
+        "max_seq_length = 2048 # Choose any! We auto support RoPE Scaling internally!\n",
+        "dtype = None # None for auto detection. Float16 for Tesla T4, V100, Bfloat16 for Ampere+\n",
+        "load_in_4bit = True # Use 4bit quantization to reduce memory usage. Can be False.\n",
+        "num_train_epochs  = 2\n",
+        "show_iteration = 2\n",
+        "\n",
+        "model, tokenizer = FastLanguageModel.from_pretrained(\n",
+        "    model_name = \"google/gemma-2-2b\",\n",
+        "    max_seq_length = max_seq_length,\n",
+        "    dtype = dtype,\n",
+        "    load_in_4bit = load_in_4bit,\n",
+        "    token = userdata.get('HF_TOKEN')\n",
+        ")"
+      ],
+      "metadata": {
+        "id": "33hp9d4dCgZF"
       },
       "execution_count": null,
       "outputs": []
