--- a/ContinuePretraining&finetune.ipynb
+++ b/ContinuePretraining&finetune.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "L4",
-      "authorship_tag": "ABX9TyMyEqCtwRd129mtULGEXVJj",
+      "authorship_tag": "ABX9TyN7tkENHXimtZnU9Wh3gIbw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -7554,7 +7554,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/msamwelmollel/jasiri_presentation/blob/main/ContinuePretraining%26finetune.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/msamwelmollel/jasiri_presentation/blob/main/Continuepretrainin.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -7815,11 +7815,11 @@
         ")"
       ],
       "metadata": {
-        "id": "qkxYZqZGDg1b",
-        "outputId": "66e9ded0-780f-4182-9fc7-c47bc5c33345",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "qkxYZqZGDg1b",
+        "outputId": "66e9ded0-780f-4182-9fc7-c47bc5c33345"
       },
       "execution_count": 5,
       "outputs": [
@@ -7858,8 +7858,6 @@
         "dataset_all = load_dataset(data_name, split = \"train\",)"
       ],
       "metadata": {
-        "id": "6AH8jDK6DGeT",
-        "outputId": "5913f0a4-6fd2-44a5-a7b1-d33a32e649da",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 305,
@@ -7964,7 +7962,9 @@
             "ef4e7c76c7dd47709b2a8aa90077cf86",
             "4e222055f294457782172433e9a5eb92"
           ]
-        }
+        },
+        "id": "6AH8jDK6DGeT",
+        "outputId": "5913f0a4-6fd2-44a5-a7b1-d33a32e649da"
       },
       "execution_count": 6,
       "outputs": [
@@ -8103,12 +8103,12 @@
         "dataset['text'][0]"
       ],
       "metadata": {
-        "id": "wnRVWtDJEU6x",
-        "outputId": "af1df14e-72fa-4aa2-9737-68d09f8178cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "wnRVWtDJEU6x",
+        "outputId": "af1df14e-72fa-4aa2-9737-68d09f8178cb"
       },
       "execution_count": 7,
       "outputs": [
@@ -8147,8 +8147,6 @@
         "dataset = dataset.map(formatting_prompts_func, batched = True,)"
       ],
       "metadata": {
-        "id": "FKMmRKLqEnRq",
-        "outputId": "24cfe99c-4e12-4ef2-cf7c-12d3fec5e811",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -8165,7 +8163,9 @@
             "ef5444f22d004b4aa4e0c2e3037f7ddf",
             "3c7880d68a68406d9490942ae7538a49"
           ]
-        }
+        },
+        "id": "FKMmRKLqEnRq",
+        "outputId": "24cfe99c-4e12-4ef2-cf7c-12d3fec5e811"
       },
       "execution_count": 8,
       "outputs": [
@@ -8227,8 +8227,6 @@
         ")"
       ],
       "metadata": {
-        "id": "132TrPspE9BE",
-        "outputId": "805bde4e-a35e-4371-9248-5d02909fb14a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -8245,7 +8243,9 @@
             "f06a679d668a41868be0bed75615a40f",
             "f2e498622d7e411c85a1eb93bd755864"
           ]
-        }
+        },
+        "id": "132TrPspE9BE",
+        "outputId": "805bde4e-a35e-4371-9248-5d02909fb14a"
       },
       "execution_count": 9,
       "outputs": [
@@ -8276,11 +8276,11 @@
         "print(f\"{start_gpu_memory} GB of memory reserved.\")"
       ],
       "metadata": {
-        "id": "zAI0Ef9UKH11",
-        "outputId": "ae88d722-336e-4d6f-c946-ec86eccf0625",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zAI0Ef9UKH11",
+        "outputId": "ae88d722-336e-4d6f-c946-ec86eccf0625"
       },
       "execution_count": 17,
       "outputs": [
@@ -8300,12 +8300,12 @@
         "trainer_stats = trainer.train()"
       ],
       "metadata": {
-        "id": "74MdJXRTFIvS",
-        "outputId": "e7f07f4e-56ae-42d8-84ae-3bfe13a375e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 197
-        }
+        },
+        "id": "74MdJXRTFIvS",
+        "outputId": "e7f07f4e-56ae-42d8-84ae-3bfe13a375e4"
       },
       "execution_count": 10,
       "outputs": [
@@ -8390,8 +8390,6 @@
         "dataset = dataset.map(formatting_prompts_func, batched = True,)"
       ],
       "metadata": {
-        "id": "E6n65rP_HXpD",
-        "outputId": "7dcfc946-ed0f-4fd2-ab37-4490e8d4d045",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 145,
@@ -8441,7 +8439,9 @@
             "a251db18874b4f5e9732cdfaf7a714e1",
             "63960f4af6cf45adbf5e82497eee3f21"
           ]
-        }
+        },
+        "id": "E6n65rP_HXpD",
+        "outputId": "7dcfc946-ed0f-4fd2-ab37-4490e8d4d045"
       },
       "execution_count": 11,
       "outputs": [
@@ -8509,12 +8509,12 @@
         "dataset['text'][0]"
       ],
       "metadata": {
-        "id": "bkOEbmf1JLqD",
-        "outputId": "8e12eb7d-763f-4de6-d82c-e19d292a54e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        }
+        },
+        "id": "bkOEbmf1JLqD",
+        "outputId": "8e12eb7d-763f-4de6-d82c-e19d292a54e9"
       },
       "execution_count": 12,
       "outputs": [
@@ -8574,8 +8574,6 @@
         ")"
       ],
       "metadata": {
-        "id": "yRWN0cvQJIQJ",
-        "outputId": "a8436e7a-8517-4387-c2bb-d7d3b8b6cf52",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 66,
@@ -8592,7 +8590,9 @@
             "1767932d6cb742a0a4067599e5ab51cc",
             "3995a1d60ae043b2ae5b7cc8479031f0"
           ]
-        }
+        },
+        "id": "yRWN0cvQJIQJ",
+        "outputId": "a8436e7a-8517-4387-c2bb-d7d3b8b6cf52"
       },
       "execution_count": 14,
       "outputs": [
@@ -8625,12 +8625,12 @@
         "trainer_stats = trainer.train()"
       ],
       "metadata": {
-        "id": "5d6AbyNHJcor",
-        "outputId": "233f65ae-769f-459b-c25e-270bdbefd59c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 447
-        }
+        },
+        "id": "5d6AbyNHJcor",
+        "outputId": "233f65ae-769f-459b-c25e-270bdbefd59c"
       },
       "execution_count": 15,
       "outputs": [
@@ -8730,11 +8730,11 @@
         "print(f\"Peak reserved memory for training % of max memory = {lora_percentage} %.\")"
       ],
       "metadata": {
-        "id": "8bz7MgVuJy4c",
-        "outputId": "2c1f72b1-d7c8-4bb1-a7e7-0115e4b161d2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8bz7MgVuJy4c",
+        "outputId": "2c1f72b1-d7c8-4bb1-a7e7-0115e4b161d2"
       },
       "execution_count": 18,
       "outputs": [
@@ -8770,11 +8770,11 @@
         "tokenizer.batch_decode(outputs)"
       ],
       "metadata": {
-        "id": "RVD657nmJ0js",
-        "outputId": "54977964-95e3-4b31-86d7-bb6addb456db",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RVD657nmJ0js",
+        "outputId": "54977964-95e3-4b31-86d7-bb6addb456db"
       },
       "execution_count": 19,
       "outputs": [
@@ -8821,11 +8821,11 @@
         "_ = model.generate(**inputs, streamer = text_streamer, max_new_tokens = 128)"
       ],
       "metadata": {
-        "id": "OImBpsKVK0dO",
-        "outputId": "ce7e5774-67c4-49c7-bbc7-0302bc4ee14a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "OImBpsKVK0dO",
+        "outputId": "ce7e5774-67c4-49c7-bbc7-0302bc4ee14a"
       },
       "execution_count": 20,
       "outputs": [
@@ -8846,6 +8846,24 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Merge to 16bit\n",
+        "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"merged_16bit\",)\n",
+        "if False: model.push_to_hub_merged(\"jasiri_gemma29B16bit\", tokenizer, save_method = \"merged_16bit\", token = userdata.get('HF_TOKEN'))\n",
+        "\n",
+        "\n",
+        "# Just LoRA adapters\n",
+        "if False: model.save_pretrained_merged(\"model\", tokenizer, save_method = \"lora\",)\n",
+        "if True: model.push_to_hub_merged(\"jasiri_gemma29BLora\", tokenizer, save_method = \"lora\", token = userdata.get('HF_TOKEN'))"
+      ],
+      "metadata": {
+        "id": "hzUx_9zHLGty"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
