--- a/Scripts/AfroCentricAI_evaluation_model.ipynb
+++ b/Scripts/AfroCentricAI_evaluation_model.ipynb
@@ -1,29 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm",
-      "gpuType": "A100",
-      "authorship_tag": "ABX9TyOIWhlFeUWbM0ESv5PGpSkQ",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/msamwelmollel/jasiri_presentation/blob/main/AfroCentricAI_evaluation_model.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -33,16 +14,16 @@
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
-        "id": "-hn8RXibX7cg",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "-hn8RXibX7cg",
         "outputId": "637f0fc2-91cf-465e-8cf8-bc4be1c1540f"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Cloning into 'lm-evaluation-harness'...\n",
             "remote: Enumerating objects: 38697, done.\u001b[K\n",
@@ -60,9 +41,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "%cd lm-evaluation-harness"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -70,22 +49,22 @@
         "id": "37tzNLSp9eA3",
         "outputId": "62be664d-f2b6-4e3f-9860-70a012b4ff20"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/lm-evaluation-harness\n"
           ]
         }
+      ],
+      "source": [
+        "%cd lm-evaluation-harness"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -e ."
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -93,11 +72,10 @@
         "id": "Wt3uaV8c9iP_",
         "outputId": "ea29509e-493f-496d-a7ea-d1bb44579025"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Obtaining file:///content/lm-evaluation-harness\n",
             "  Installing build dependencies ... \u001b[?25l\u001b[?25hdone\n",
@@ -318,13 +296,14 @@
             "\u001b[0mSuccessfully installed DataProperty-1.0.1 colorama-0.4.6 datasets-2.20.0 dill-0.3.8 evaluate-0.4.2 fsspec-2024.5.0 jsonlines-4.0.0 lm_eval-0.4.3 mbstrdecoder-1.1.3 multiprocess-0.70.16 nvidia-cublas-cu12-12.1.3.1 nvidia-cuda-cupti-cu12-12.1.105 nvidia-cuda-nvrtc-cu12-12.1.105 nvidia-cuda-runtime-cu12-12.1.105 nvidia-cudnn-cu12-8.9.2.26 nvidia-cufft-cu12-11.0.2.54 nvidia-curand-cu12-10.3.2.106 nvidia-cusolver-cu12-11.4.5.107 nvidia-cusparse-cu12-12.1.0.106 nvidia-nccl-cu12-2.20.5 nvidia-nvjitlink-cu12-12.5.82 nvidia-nvtx-cu12-12.1.105 pathvalidate-3.2.0 peft-0.12.0 portalocker-2.10.1 pyarrow-17.0.0 pybind11-2.13.1 pytablewriter-1.2.0 requests-2.32.3 rouge-score-0.1.2 sacrebleu-2.4.2 sqlitedict-2.1.0 tabledata-1.3.3 tcolorpy-0.1.6 tqdm-multiprocess-0.0.11 typepy-1.3.2 word2number-1.1 xxhash-3.4.1 zstandard-0.23.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install -e ."
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!huggingface-cli login --token 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"
-      ],
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -332,11 +311,10 @@
         "id": "q0RKH3In9o3m",
         "outputId": "844cfe11-98f7-445b-b50d-bde810dec63b"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
             "Token is valid (permission: write).\n",
@@ -344,20 +322,14 @@
             "Login successful\n"
           ]
         }
+      ],
+      "source": [
+        "!huggingface-cli login --token "
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!lm_eval --model hf \\\n",
-        "    --model_args pretrained='sartifyllc/sartify_gemma2-2B-16bit' \\\n",
-        "    --tasks arc_challenge_swh  \\\n",
-        "    --device cuda:0 \\\n",
-        "    --batch_size auto:4\n",
-        "\n",
-        "  # swahili_bench\n",
-        "      # --num_fewshot 25 \\"
-      ],
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -365,11 +337,10 @@
         "id": "Ud4eB_-J9qnY",
         "outputId": "550182ec-c5b8-4a88-c765-2b77a267f43e"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2024-08-01 12:16:33.001831: I tensorflow/core/util/port.cc:153] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
             "2024-08-01 12:16:33.019428: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
@@ -922,7 +893,36 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "!lm_eval --model hf \\\n",
+        "    --model_args pretrained='sartifyllc/sartify_gemma2-2B-16bit' \\\n",
+        "    --tasks arc_challenge_swh  \\\n",
+        "    --device cuda:0 \\\n",
+        "    --batch_size auto:4\n",
+        "\n",
+        "  # swahili_bench\n",
+        "      # --num_fewshot 25 \\"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "authorship_tag": "ABX9TyOIWhlFeUWbM0ESv5PGpSkQ",
+      "gpuType": "A100",
+      "include_colab_link": true,
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
